# T-cnicas-de-Computaci-n-Cient-fica

./: CMakeLists.txt  README.md
Proyecto Paralelismo/: main_mpi  main_seq
Proyecto Paralelismo/apps/: main_mpi.c  main_seq.c
Proyecto Paralelismo/include/: config.h  grid.h  heat.h  io.h  timer.h
Proyecto Paralelismo/results/raw/: mpi.csv  seq.csv
Proyecto Paralelismo/scripts/: run_mpi.sh  run_seq.sh
Proyecto Paralelismo/src/: grid.c  heat_mpi.c  heat_seq.c
Proyecto Secuencial/scripts/: run_seq.sh
